--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ after_success:
   - docker build -t timerdmann/docker-complex-worker ./worker
 
   # log into docker cli
-  - echo "$DOCKER_PASSWORD" | docker login --username "$DOCHER_ID" --password-stdin
+  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
 
   # push the generated images to docker hub
   - docker push timerdmann/docker-complex-client
