added deploy config to travis yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,3 +25,15 @@ after_success:
   - docker push timerdmann/docker-complex-nginx
   - docker push timerdmann/docker-complex-server
   - docker push timerdmann/docker-complex-worker
+
+deploy:
+  provider: elasticbeanstalk
+  region: "us-east-2"
+  app: "docker-complex"
+  env: "Dockercomplex-env"
+  bucket_name: "elasticbeanstalk-us-east-2-779743553114"
+  bucket_path: "docker-complex"
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: $AWS_SECRET_KEY
